--- a/starter-code-frontend-sprint-3/index.html
+++ b/starter-code-frontend-sprint-3/index.html
@@ -31,6 +31,12 @@
 								<i class="fas fa-shopping-cart me-1"></i> Cart <span class="badge bg-dark text-white ms-1 rounded-pill" id="count_product">0</span>
 							 </a>
 						 </li>
+
+						 <li class="dropdown search-dropdown nav-item py-lg-3">						 
+							<a href="javascript:void(0)" class="btn btn-outline-dark flex-center" type="button" data-bs-toggle="modal" data-bs-target="#cartModal" onclick="generateCart()" data-bs-auto-close="outside">
+							   <i class="fas fa-shopping-cart me-1"></i> Cart 2 <span class="badge bg-dark text-white ms-1 rounded-pill" id="count_product">0</span>
+							</a>
+						</li>
 					 </ul>
 				 </div>
 
@@ -263,6 +269,7 @@
 				  <div class="text-center"> 
 					<a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
 					<a href="javascript:void(0)" onclick="cleanCart()" class="btn btn-primary m-3">Clean Cart</a>
+					<a href="javascript:void(0)" onclick="applyPromotionsCart()" class="btn btn-primary m-3"> Apply promotions</a>
 				  </div>
 			  </div>
 			</div>
