--- a/starter-code-frontend-sprint-3/index.html
+++ b/starter-code-frontend-sprint-3/index.html
@@ -32,11 +32,11 @@
 							 </a>
 						 </li>
 
-						 <li class="dropdown search-dropdown nav-item py-lg-3">						 
+						 <!--<li class="dropdown search-dropdown nav-item py-lg-3">						 
 							<a href="javascript:void(0)" class="btn btn-outline-dark flex-center" type="button" data-bs-toggle="modal" data-bs-target="#cartModal" onclick="generateCart()" data-bs-auto-close="outside">
 							   <i class="fas fa-shopping-cart me-1"></i> Cart 2 <span class="badge bg-dark text-white ms-1 rounded-pill" id="count_product">0</span>
 							</a>
-						</li>
+						</li>-->
 					 </ul>
 				 </div>
 
@@ -243,33 +243,16 @@
 						</tr>
 					  </thead>
 					  <tbody id="cart_list">
-						<tr>
-						  <th scope="row">Cooking oil</th>
-						  <td>$10.5</td>
-						  <td>2</td>
-						  <td>$21</td>
-						</tr>
-						<tr>
-						  <th scope="row">Pasta</th>
-						  <td>$6.25</td>
-						  <td>1</td>
-						  <td>$6.25</td>
-						</tr>
-						<tr>
-						  <th scope="row">Lawn dress</th>
-						  <td>$15</td>
-						  <td>3</td>
-						  <td>$45</td>
-						</tr>
+						
 					  </tbody>
 				  </table>
 				  <div class="text-center fs-3">
-					Total: $<span id="total_price">100</span>
+					Total: <span id="total_price"></span>
 				  </div>
 				  <div class="text-center"> 
 					<a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
 					<a href="javascript:void(0)" onclick="cleanCart()" class="btn btn-primary m-3">Clean Cart</a>
-					<a href="javascript:void(0)" onclick="applyPromotionsCart()" class="btn btn-primary m-3"> Apply promotions</a>
+					<!--<a href="javascript:void(0)" onclick="applyPromotionsCart()" class="btn btn-primary m-3"> Apply promotions</a>-->
 				  </div>
 			  </div>
 			</div>
